--- a/note.html
+++ b/note.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Newsreader&family=Nunito+Sans:wght@300&family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
+    <script defer src="JS/app.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
