added plus and dark theme button, not usable yet.

--- a/note.html
+++ b/note.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Newsreader&family=Nunito+Sans:wght@300&family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
+    <script src="https://kit.fontawesome.com/e1f606f64c.js" crossorigin="anonymous"></script>
     <script defer src="JS/app.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,13 +20,15 @@
         <section>
             <nav>
                 <ul class="button">
+                    <button class="button" id="dark_Theme"><a>Dark Theme</a></button>
                     <button class="button"><a>Docs</a></button>
                     <button class="button"><a>About</a></button>
                 </ul>
             </nav>
             <button class="button sidebar"><a href="pages/new_page.html">>></a></button>
             <article>
-                <button class="button" id="add_symbol"><a  href='pages/new_page.html'>+</a></button>
+                <!-- <button class="button" id="add_symbol"><a>+</a></button> -->
+                <span class="button" id="add_symbol"><i class="fas fa-plus"></i></span>
                 <div class="create_box">
                     <p>create a new note</p>
                 </div>
