--- a/note.html
+++ b/note.html
@@ -27,11 +27,11 @@
             </nav>
             <button class="button sidebar"><a href="pages/new_page.html">>></a></button>
             <article>
-                <!-- <button class="button" id="add_symbol"><a>+</a></button> -->
-                <span class="button" id="add_symbol"><i class="fas fa-plus"></i></span>
+                <span onclick="createContentWritingArea()" class="button" id="add_symbol"><i class="fas fa-plus"></i></span>
                 <div class="create_box">
                     <p>create a new note</p>
                 </div>
+                <div id="content"></div>
             </article>
         </section>
         <footer>NoteCan ©, Created By: Matthew Dandar</footer>
