added working save and cancel buttons

--- a/note.html
+++ b/note.html
@@ -26,12 +26,14 @@
                 </ul>
             </nav>
             <button class="button sidebar"><a href="pages/new_page.html">>></a></button>
+            <!-- <i class="fas fa-bars"></i> -->
             <article>
                 <span onclick="createContentWritingArea()" class="button" id="add_symbol"><i class="fas fa-plus"></i></span>
                 <div class="create_box">
                     <p>create a new note</p>
                 </div>
                 <div id="content"></div>
+                <div id="view-note"></div>
             </article>
         </section>
         <footer>NoteCan ©, Created By: Matthew Dandar</footer>
