added dark mode button, fix light mode

--- a/note.html
+++ b/note.html
@@ -18,7 +18,7 @@
             <h1>Note Canister</h1>
         </header>
         <aside>
-            <span onclick="openSavedNotesSection()" class="button sidebar"><i class="fas fa-bars"></i></span>
+            <span onclick="openSavedNotesSection()" class="button sidebar" id="open"><i class="fas fa-bars"></i></span>
             <div id="view-note"></div>
         </aside>
         <section>
