--- a/note.html
+++ b/note.html
@@ -32,7 +32,7 @@
             <article>
                 <span onclick="createContentWritingArea()" class="button" id="add_symbol"><i class="fas fa-plus"></i></span>
                 <div class="create_box">
-                    <p id="create_message">create a new note</p>
+                    <a id="create_message">create a new note</a>
                 </div>
                 <div id="content"></div>
             </article>
